--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
+    <style>
+      .value {
+        font-size: 50px;
+      }
+      .field {
+        flex-direction: column;
+        align-items: center;
+        display: flex;
+        margin-right: 15px;
+      }
+      .label {
+        font-size: 20px;
+        text-transform: uppercase;
+        font-weight: 500;
+      }
+      .timer {
+        display: flex;
+      }
+    </style>
     <p><a href="index.html">Go back</a></p>
 
     <input type="text" id="datetime-picker" />
